<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    >

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.apicatalog</groupId>
    <artifactId>jsonp-ld</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>JSONP-LD 1.1</name>
	
    <description>
    A JSON-LD 1.1 Processor
    </description>
    
    <url>https://github.com/filip26/jsonp-ld</url>
    
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>    
	
    <distributionManagement>
	    <repository>
            <id>github</id>
	        <name>GitHub filip26 Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/filip26/jsonp-ld</url>
        </repository>
    </distributionManagement>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/filip26/jsonp-ld/issues</url>
    </issueManagement>
	
    <scm>
        <connection>scm:git:git://github.com/filip26/jsonp-ld.git</connection>
        <developerConnection>scm:git:git://github.com/filip26/jsonp-ld.git</developerConnection>
        <url>https://github.com/filip26/jsonp-ld</url>
    </scm>

    <developers>
        <developer>
  	    <id>filip26</id>
  	    <name>Filip Kolarik</name>
  	    <email>filip26@gmail.com</email>
  	    <roles><role>author</role></roles>
        </developer>
    </developers>
    
    <properties>
        <maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
         <json-p.version>1.1</json-p.version>
         
         <!--  test resources -->
        <junit.version>4.13</junit.version>
        <test-suite.version>20200518</test-suite.version>
    </properties>

    <dependencies>
		<dependency>
		    <groupId>javax.json</groupId>
		    <artifactId>javax.json-api</artifactId>
		    <version>${json-p.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>org.glassfish</groupId>
		    <artifactId>javax.json</artifactId>
		    <version>${json-p.version}</version>
            <scope>test</scope>
		</dependency>

        <!--  Tests -->		
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>        
            <groupId>com.github.w3c</groupId>
            <artifactId>json-ld-test-suite</artifactId>
            <version>${test-suite.version}</version>
            <scope>test</scope>           
        </dependency>

    </dependencies>

    <build>		
        <plugins>
   			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>             
		</plugins>
	</build>
	<repositories>
	   <repository>
		    <id>github</id>
     	<name>GitHub filip26 Apache Maven Packages</name>
     	<url>https://maven.pkg.github.com/filip26/json-ld-api</url>
   		</repository>
	</repositories>


</project>
